Changed code to match jdk 17